updated docker and pom files

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.build.test.maven.Java</groupId>
-  <artifactId>TestMavenApp</artifactId>
+  <artifactId>TestProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>TestMavenApp</name>
+  <name>TestProject</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
